--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3"
-  },
-  "devDependencies": {
-    "dotenv": "^16.4.5"
   }
 }
